--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class="background">
+        <video autoplay muted loop id="backgroundVideo">
+            <source src="https://dm0qx8t0i9gc9.cloudfront.net/watermarks/video/SRsQjwFQMjby34s1c/videoblocks-digital-seamless-mathematical-formulas-loop-abstract-digital-futuristic-motion-background-with-math-physics-symbols-and-mesh-network-grid-3d-animation-with-alpha-matte-channel-4k-science-c__66e3a4bff6834d07214dbac738d70697__P360.mp4" type="video/mp4">
+        </video>
+    </div>
     <div class="container">
         <div class="calculator">
             <form>
