Added Keyboard input

--- a/index.html
+++ b/index.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="index.css">
-</head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
+  <body>
     <div class="background">
-        <video autoplay muted loop id="backgroundVideo">
-            <source src="https://dm0qx8t0i9gc9.cloudfront.net/watermarks/video/SRsQjwFQMjby34s1c/videoblocks-digital-seamless-mathematical-formulas-loop-abstract-digital-futuristic-motion-background-with-math-physics-symbols-and-mesh-network-grid-3d-animation-with-alpha-matte-channel-4k-science-c__66e3a4bff6834d07214dbac738d70697__P360.mp4" type="video/mp4">
-        </video>
+      <video autoplay muted loop id="backgroundVideo">
+        <source
+          src="https://dm0qx8t0i9gc9.cloudfront.net/watermarks/video/SRsQjwFQMjby34s1c/videoblocks-digital-seamless-mathematical-formulas-loop-abstract-digital-futuristic-motion-background-with-math-physics-symbols-and-mesh-network-grid-3d-animation-with-alpha-matte-channel-4k-science-c__66e3a4bff6834d07214dbac738d70697__P360.mp4"
+          type="video/mp4"
+        />
+      </video>
     </div>
     <div class="container">
-        <div class="calculator">
-            <form>
-                <div class="display">
-                </div>
-                <div>
-                    <input type="button" value="AC " id="clear">
-                    <input type="button" value="DE " id="delete">
-                    <input type="button" value="%" id="mod">
-                    <input type="button" value="/" id="divide">
-                </div>
-                <div>
-                    <input type="button" value="7" id="num7">
-                    <input type="button" value="8" id="num8">
-                    <input type="button" value="9" id="num9">
-                    <input type="button" value="*" id="multiply">
-                </div>
-                <div>
-                    <input type="button" value="4" id="num4">
-                    <input type="button" value="5" id="num5">
-                    <input type="button" value="6" id="num6">
-                    <input type="button" value="-" id="minus">
-                </div>
-                <div>
-                    <input type="button" value="1" id="num1">
-                    <input type="button" value="2" id="num2">
-                    <input type="button" value="3" id="num3">
-                    <input type="button" value="+" id="sum">
-                </div>
-                <div>
-                    <input type="button" value="0" id="num0">
-                    <input type="button" value="." id="dot">
-                    <input id="eq" type="button" value="=" >
-
-                </div>
-            </form>
-        </div>
+      <div class="calculator">
+        <form>
+          <div class="display"></div>
+          <div>
+            <input type="button" value="AC " id="clear" />
+            <input type="button" value="DE " id="delete" />
+            <input type="button" value="%" id="mod" />
+            <input type="button" value="/" id="divide" />
+          </div>
+          <div>
+            <input type="button" value="7" id="num7" />
+            <input type="button" value="8" id="num8" />
+            <input type="button" value="9" id="num9" />
+            <input type="button" value="*" id="multiply" />
+          </div>
+          <div>
+            <input type="button" value="4" id="num4" />
+            <input type="button" value="5" id="num5" />
+            <input type="button" value="6" id="num6" />
+            <input type="button" value="-" id="minus" />
+          </div>
+          <div>
+            <input type="button" value="1" id="num1" />
+            <input type="button" value="2" id="num2" />
+            <input type="button" value="3" id="num3" />
+            <input type="button" value="+" id="sum" />
+          </div>
+          <div>
+            <input type="button" value="0" id="num0" />
+            <input type="button" value="." id="dot" />
+            <input type="button" value="Ans" id="ans" />
+            <input id="eq" type="button" value="=" />
+          </div>
+        </form>
+      </div>
     </div>
 
     <script src="./script.js"></script>
-</body>
-
+  </body>
 </html>
